Etapa1-1810436-1900036/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkElse

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> TkOBlock opt_stmt_list TkCBlock
Rule 3     opt_stmt_list -> stmt_list
Rule 4     opt_stmt_list -> empty
Rule 5     stmt_list -> statement
Rule 6     stmt_list -> statement TkSemicolon stmt_list
Rule 7     statement -> declaration_stmt
Rule 8     statement -> assignment_stmt
Rule 9     statement -> print_stmt
Rule 10    statement -> skip_stmt
Rule 11    statement -> return_stmt
Rule 12    statement -> if_stmt
Rule 13    statement -> while_stmt
Rule 14    declaration_stmt -> TkInt declare_id_list
Rule 15    declaration_stmt -> TkBool declare_id_list
Rule 16    declaration_stmt -> TkFunction TkOBracket TkSoForth TkNum TkCBracket declare_id_list
Rule 17    declare_id_list -> TkId
Rule 18    declare_id_list -> TkId TkComma declare_id_list
Rule 19    assignment_stmt -> TkId TkAsig expr
Rule 20    print_stmt -> TkPrint expr
Rule 21    skip_stmt -> TkSkip
Rule 22    return_stmt -> TkReturn expr
Rule 23    while_stmt -> TkWhile expr TkArrow body_sequencing TkEnd
Rule 24    if_guards_list_collector -> if_guard_clause_tuple
Rule 25    if_guards_list_collector -> if_guards_list_collector if_guard_clause_tuple
Rule 26    if_guard_clause_tuple -> expr TkArrow body_sequencing
Rule 27    if_guard_clause_tuple -> TkGuard expr TkArrow body_sequencing
Rule 28    if_stmt -> TkIf if_guards_list TkFi
Rule 29    if_guards_list -> if_guard_clause
Rule 30    if_guards_list -> if_guard_clause if_guards_list
Rule 31    if_guard_clause -> expr TkArrow body_sequencing
Rule 32    if_guard_clause -> TkGuard expr TkArrow body_sequencing
Rule 33    body_sequencing -> body_stmt_item
Rule 34    body_sequencing -> body_stmt_item TkSemicolon body_sequencing
Rule 35    body_stmt_item -> assignment_stmt
Rule 36    body_stmt_item -> print_stmt
Rule 37    body_stmt_item -> skip_stmt
Rule 38    body_stmt_item -> return_stmt
Rule 39    body_stmt_item -> if_stmt
Rule 40    body_stmt_item -> while_stmt
Rule 41    body_stmt_item -> block
Rule 42    expr -> expr TkPlus expr
Rule 43    expr -> expr TkMinus expr
Rule 44    expr -> expr TkMult expr
Rule 45    expr -> expr TkAnd expr
Rule 46    expr -> expr TkOr expr
Rule 47    expr -> expr TkEqual expr
Rule 48    expr -> expr TkNEqual expr
Rule 49    expr -> expr TkLess expr
Rule 50    expr -> expr TkGreater expr
Rule 51    expr -> expr TkLeq expr
Rule 52    expr -> expr TkGeq expr
Rule 53    expr -> expr TkApp expr
Rule 54    expr -> TkMinus expr
Rule 55    expr -> TkNot expr
Rule 56    expr -> TkOpenPar expr TkClosePar
Rule 57    expr -> TkNum
Rule 58    expr -> TkTrue
Rule 59    expr -> TkFalse
Rule 60    expr -> TkString
Rule 61    expr -> TkId
Rule 62    expr -> expr TkComma expr
Rule 63    expr -> expr TkTwoPoints expr
Rule 64    empty -> <empty>

Terminals, with rules where they appear

TkAnd                : 45
TkApp                : 53
TkArrow              : 23 26 27 31 32
TkAsig               : 19
TkBool               : 15
TkCBlock             : 2
TkCBracket           : 16
TkClosePar           : 56
TkComma              : 18 62
TkElse               : 
TkEnd                : 23
TkEqual              : 47
TkFalse              : 59
TkFi                 : 28
TkFunction           : 16
TkGeq                : 52
TkGreater            : 50
TkGuard              : 27 32
TkId                 : 17 18 19 61
TkIf                 : 28
TkInt                : 14
TkLeq                : 51
TkLess               : 49
TkMinus              : 43 54
TkMult               : 44
TkNEqual             : 48
TkNot                : 55
TkNum                : 16 57
TkOBlock             : 2
TkOBracket           : 16
TkOpenPar            : 56
TkOr                 : 46
TkPlus               : 42
TkPrint              : 20
TkReturn             : 22
TkSemicolon          : 6 34
TkSkip               : 21
TkSoForth            : 16
TkString             : 60
TkTrue               : 58
TkTwoPoints          : 63
TkWhile              : 23
error                : 

Nonterminals, with rules where they appear

assignment_stmt      : 8 35
block                : 1 41
body_sequencing      : 23 26 27 31 32 34
body_stmt_item       : 33 34
declaration_stmt     : 7
declare_id_list      : 14 15 16 18
empty                : 4
expr                 : 19 20 22 23 26 27 31 32 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55 56 62 62 63 63
if_guard_clause      : 29 30
if_guard_clause_tuple : 24 25
if_guards_list       : 28 30
if_guards_list_collector : 25
if_stmt              : 12 39
opt_stmt_list        : 2
print_stmt           : 9 36
program              : 0
return_stmt          : 11 38
skip_stmt            : 10 37
statement            : 5 6
stmt_list            : 3 6
while_stmt           : 13 40

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . TkOBlock opt_stmt_list TkCBlock

    TkOBlock        shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> TkOBlock . opt_stmt_list TkCBlock
    (3) opt_stmt_list -> . stmt_list
    (4) opt_stmt_list -> . empty
    (5) stmt_list -> . statement
    (6) stmt_list -> . statement TkSemicolon stmt_list
    (64) empty -> .
    (7) statement -> . declaration_stmt
    (8) statement -> . assignment_stmt
    (9) statement -> . print_stmt
    (10) statement -> . skip_stmt
    (11) statement -> . return_stmt
    (12) statement -> . if_stmt
    (13) statement -> . while_stmt
    (14) declaration_stmt -> . TkInt declare_id_list
    (15) declaration_stmt -> . TkBool declare_id_list
    (16) declaration_stmt -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket declare_id_list
    (19) assignment_stmt -> . TkId TkAsig expr
    (20) print_stmt -> . TkPrint expr
    (21) skip_stmt -> . TkSkip
    (22) return_stmt -> . TkReturn expr
    (28) if_stmt -> . TkIf if_guards_list TkFi
    (23) while_stmt -> . TkWhile expr TkArrow body_sequencing TkEnd

    TkCBlock        reduce using rule 64 (empty -> .)
    TkInt           shift and go to state 15
    TkBool          shift and go to state 16
    TkFunction      shift and go to state 17
    TkId            shift and go to state 18
    TkPrint         shift and go to state 19
    TkSkip          shift and go to state 20
    TkReturn        shift and go to state 21
    TkIf            shift and go to state 22
    TkWhile         shift and go to state 23

    opt_stmt_list                  shift and go to state 4
    stmt_list                      shift and go to state 5
    empty                          shift and go to state 6
    statement                      shift and go to state 7
    declaration_stmt               shift and go to state 8
    assignment_stmt                shift and go to state 9
    print_stmt                     shift and go to state 10
    skip_stmt                      shift and go to state 11
    return_stmt                    shift and go to state 12
    if_stmt                        shift and go to state 13
    while_stmt                     shift and go to state 14

state 4

    (2) block -> TkOBlock opt_stmt_list . TkCBlock

    TkCBlock        shift and go to state 24


state 5

    (3) opt_stmt_list -> stmt_list .

    TkCBlock        reduce using rule 3 (opt_stmt_list -> stmt_list .)


state 6

    (4) opt_stmt_list -> empty .

    TkCBlock        reduce using rule 4 (opt_stmt_list -> empty .)


state 7

    (5) stmt_list -> statement .
    (6) stmt_list -> statement . TkSemicolon stmt_list

    TkCBlock        reduce using rule 5 (stmt_list -> statement .)
    TkSemicolon     shift and go to state 25


state 8

    (7) statement -> declaration_stmt .

    TkSemicolon     reduce using rule 7 (statement -> declaration_stmt .)
    TkCBlock        reduce using rule 7 (statement -> declaration_stmt .)


state 9

    (8) statement -> assignment_stmt .

    TkSemicolon     reduce using rule 8 (statement -> assignment_stmt .)
    TkCBlock        reduce using rule 8 (statement -> assignment_stmt .)


state 10

    (9) statement -> print_stmt .

    TkSemicolon     reduce using rule 9 (statement -> print_stmt .)
    TkCBlock        reduce using rule 9 (statement -> print_stmt .)


state 11

    (10) statement -> skip_stmt .

    TkSemicolon     reduce using rule 10 (statement -> skip_stmt .)
    TkCBlock        reduce using rule 10 (statement -> skip_stmt .)


state 12

    (11) statement -> return_stmt .

    TkSemicolon     reduce using rule 11 (statement -> return_stmt .)
    TkCBlock        reduce using rule 11 (statement -> return_stmt .)


state 13

    (12) statement -> if_stmt .

    TkSemicolon     reduce using rule 12 (statement -> if_stmt .)
    TkCBlock        reduce using rule 12 (statement -> if_stmt .)


state 14

    (13) statement -> while_stmt .

    TkSemicolon     reduce using rule 13 (statement -> while_stmt .)
    TkCBlock        reduce using rule 13 (statement -> while_stmt .)


state 15

    (14) declaration_stmt -> TkInt . declare_id_list
    (17) declare_id_list -> . TkId
    (18) declare_id_list -> . TkId TkComma declare_id_list

    TkId            shift and go to state 27

    declare_id_list                shift and go to state 26

state 16

    (15) declaration_stmt -> TkBool . declare_id_list
    (17) declare_id_list -> . TkId
    (18) declare_id_list -> . TkId TkComma declare_id_list

    TkId            shift and go to state 27

    declare_id_list                shift and go to state 28

state 17

    (16) declaration_stmt -> TkFunction . TkOBracket TkSoForth TkNum TkCBracket declare_id_list

    TkOBracket      shift and go to state 29


state 18

    (19) assignment_stmt -> TkId . TkAsig expr

    TkAsig          shift and go to state 30


state 19

    (20) print_stmt -> TkPrint . expr
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 31

state 20

    (21) skip_stmt -> TkSkip .

    TkSemicolon     reduce using rule 21 (skip_stmt -> TkSkip .)
    TkCBlock        reduce using rule 21 (skip_stmt -> TkSkip .)
    TkGuard         reduce using rule 21 (skip_stmt -> TkSkip .)
    TkMinus         reduce using rule 21 (skip_stmt -> TkSkip .)
    TkNot           reduce using rule 21 (skip_stmt -> TkSkip .)
    TkOpenPar       reduce using rule 21 (skip_stmt -> TkSkip .)
    TkNum           reduce using rule 21 (skip_stmt -> TkSkip .)
    TkTrue          reduce using rule 21 (skip_stmt -> TkSkip .)
    TkFalse         reduce using rule 21 (skip_stmt -> TkSkip .)
    TkString        reduce using rule 21 (skip_stmt -> TkSkip .)
    TkId            reduce using rule 21 (skip_stmt -> TkSkip .)
    TkFi            reduce using rule 21 (skip_stmt -> TkSkip .)
    TkEnd           reduce using rule 21 (skip_stmt -> TkSkip .)


state 21

    (22) return_stmt -> TkReturn . expr
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 40

state 22

    (28) if_stmt -> TkIf . if_guards_list TkFi
    (29) if_guards_list -> . if_guard_clause
    (30) if_guards_list -> . if_guard_clause if_guards_list
    (31) if_guard_clause -> . expr TkArrow body_sequencing
    (32) if_guard_clause -> . TkGuard expr TkArrow body_sequencing
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkGuard         shift and go to state 44
    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    if_guards_list                 shift and go to state 41
    if_guard_clause                shift and go to state 42
    expr                           shift and go to state 43

state 23

    (23) while_stmt -> TkWhile . expr TkArrow body_sequencing TkEnd
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 45

state 24

    (2) block -> TkOBlock opt_stmt_list TkCBlock .

    $end            reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkSemicolon     reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkGuard         reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkMinus         reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkNot           reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkOpenPar       reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkNum           reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkTrue          reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkFalse         reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkString        reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkId            reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkFi            reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)
    TkEnd           reduce using rule 2 (block -> TkOBlock opt_stmt_list TkCBlock .)


state 25

    (6) stmt_list -> statement TkSemicolon . stmt_list
    (5) stmt_list -> . statement
    (6) stmt_list -> . statement TkSemicolon stmt_list
    (7) statement -> . declaration_stmt
    (8) statement -> . assignment_stmt
    (9) statement -> . print_stmt
    (10) statement -> . skip_stmt
    (11) statement -> . return_stmt
    (12) statement -> . if_stmt
    (13) statement -> . while_stmt
    (14) declaration_stmt -> . TkInt declare_id_list
    (15) declaration_stmt -> . TkBool declare_id_list
    (16) declaration_stmt -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket declare_id_list
    (19) assignment_stmt -> . TkId TkAsig expr
    (20) print_stmt -> . TkPrint expr
    (21) skip_stmt -> . TkSkip
    (22) return_stmt -> . TkReturn expr
    (28) if_stmt -> . TkIf if_guards_list TkFi
    (23) while_stmt -> . TkWhile expr TkArrow body_sequencing TkEnd

    TkInt           shift and go to state 15
    TkBool          shift and go to state 16
    TkFunction      shift and go to state 17
    TkId            shift and go to state 18
    TkPrint         shift and go to state 19
    TkSkip          shift and go to state 20
    TkReturn        shift and go to state 21
    TkIf            shift and go to state 22
    TkWhile         shift and go to state 23

    statement                      shift and go to state 7
    stmt_list                      shift and go to state 46
    declaration_stmt               shift and go to state 8
    assignment_stmt                shift and go to state 9
    print_stmt                     shift and go to state 10
    skip_stmt                      shift and go to state 11
    return_stmt                    shift and go to state 12
    if_stmt                        shift and go to state 13
    while_stmt                     shift and go to state 14

state 26

    (14) declaration_stmt -> TkInt declare_id_list .

    TkSemicolon     reduce using rule 14 (declaration_stmt -> TkInt declare_id_list .)
    TkCBlock        reduce using rule 14 (declaration_stmt -> TkInt declare_id_list .)


state 27

    (17) declare_id_list -> TkId .
    (18) declare_id_list -> TkId . TkComma declare_id_list

    TkSemicolon     reduce using rule 17 (declare_id_list -> TkId .)
    TkCBlock        reduce using rule 17 (declare_id_list -> TkId .)
    TkComma         shift and go to state 47


state 28

    (15) declaration_stmt -> TkBool declare_id_list .

    TkSemicolon     reduce using rule 15 (declaration_stmt -> TkBool declare_id_list .)
    TkCBlock        reduce using rule 15 (declaration_stmt -> TkBool declare_id_list .)


state 29

    (16) declaration_stmt -> TkFunction TkOBracket . TkSoForth TkNum TkCBracket declare_id_list

    TkSoForth       shift and go to state 48


state 30

    (19) assignment_stmt -> TkId TkAsig . expr
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 49

state 31

    (20) print_stmt -> TkPrint expr .
    (42) expr -> expr . TkPlus expr
    (43) expr -> expr . TkMinus expr
    (44) expr -> expr . TkMult expr
    (45) expr -> expr . TkAnd expr
    (46) expr -> expr . TkOr expr
    (47) expr -> expr . TkEqual expr
    (48) expr -> expr . TkNEqual expr
    (49) expr -> expr . TkLess expr
    (50) expr -> expr . TkGreater expr
    (51) expr -> expr . TkLeq expr
    (52) expr -> expr . TkGeq expr
    (53) expr -> expr . TkApp expr
    (62) expr -> expr . TkComma expr
    (63) expr -> expr . TkTwoPoints expr

  ! shift/reduce conflict for TkMinus resolved as shift
    TkSemicolon     reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkCBlock        reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkGuard         reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkNot           reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkOpenPar       reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkNum           reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkTrue          reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkFalse         reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkString        reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkId            reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkFi            reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkEnd           reduce using rule 20 (print_stmt -> TkPrint expr .)
    TkPlus          shift and go to state 50
    TkMinus         shift and go to state 51
    TkMult          shift and go to state 52
    TkAnd           shift and go to state 53
    TkOr            shift and go to state 54
    TkEqual         shift and go to state 55
    TkNEqual        shift and go to state 56
    TkLess          shift and go to state 57
    TkGreater       shift and go to state 58
    TkLeq           shift and go to state 59
    TkGeq           shift and go to state 60
    TkApp           shift and go to state 61
    TkComma         shift and go to state 62
    TkTwoPoints     shift and go to state 63

  ! TkMinus         [ reduce using rule 20 (print_stmt -> TkPrint expr .) ]


state 32

    (54) expr -> TkMinus . expr
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 64

state 33

    (55) expr -> TkNot . expr
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 65

state 34

    (56) expr -> TkOpenPar . expr TkClosePar
    (42) expr -> . expr TkPlus expr
    (43) expr -> . expr TkMinus expr
    (44) expr -> . expr TkMult expr
    (45) expr -> . expr TkAnd expr
    (46) expr -> . expr TkOr expr
    (47) expr -> . expr TkEqual expr
    (48) expr -> . expr TkNEqual expr
    (49) expr -> . expr TkLess expr
    (50) expr -> . expr TkGreater expr
    (51) expr -> . expr TkLeq expr
    (52) expr -> . expr TkGeq expr
    (53) expr -> . expr TkApp expr
    (54) expr -> . TkMinus expr
    (55) expr -> . TkNot expr
    (56) expr -> . TkOpenPar expr TkClosePar
    (57) expr -> . TkNum
    (58) expr -> . TkTrue
    (59) expr -> . TkFalse
    (60) expr -> . TkString
    (61) expr -> . TkId
    (62) expr -> . expr TkComma expr
    (63) expr -> . expr TkTwoPoints expr

    TkMinus         shift and go to state 32
    TkNot           shift and go to state 33
    TkOpenPar       shift and go to state 34
    TkNum           shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 38
    TkId            shift and go to state 39

    expr                           shift and go to state 66

state 35

    (57) expr -> TkNum .

    TkPlus          reduce using rule 57 (expr -> TkNum .)
    TkMinus         reduce using rule 57 (expr -> TkNum .)
    TkMult          reduce using rule 57 (expr -> TkNum .)
    TkAnd           reduce using rule 57 (expr -> TkNum .)
    TkOr            reduce using rule 57 (expr -> TkNum .)
    TkEqual         reduce using rule 57 (expr -> TkNum .)
    TkNEqual        reduce using rule 57 (expr -> TkNum .)
    TkLess          reduce using rule 57 (expr -> TkNum .)
    TkGreater       reduce using rule 57 (expr -> TkNum .)
    TkLeq           reduce using rule 57 (expr -> TkNum .)
    TkGeq           reduce using rule 57 (expr -> TkNum .)
    TkApp           reduce using rule 57 (expr -> TkNum .)
    TkComma         reduce using rule 57 (expr -> TkNum .)
    TkTwoPoints     reduce using rule 57 (expr -> TkNum .)
    TkSemicolon     reduce using rule 57 (expr -> TkNum .)
    TkCBlock        reduce using rule 57 (expr -> TkNum .)
    TkGuard         reduce using rule 57 (expr -> TkNum .)
    TkNot           reduce using rule 57 (expr -> TkNum .)
    TkOpenPar       reduce using rule 57 (expr -> TkNum .)
    TkNum           reduce using rule 57 (expr -> TkNum .)
    TkTrue          reduce using rule 57 (expr -> TkNum .)
    TkFalse         reduce using rule 57 (expr -> TkNum .)
    TkString        reduce using rule 57 (expr -> TkNum .)
    TkId            reduce using rule 57 (expr -> TkNum .)
    TkFi            reduce using rule 57 (expr -> TkNum .)
    TkEnd           reduce using rule 57 (expr -> TkNum .)
    TkArrow         reduce using rule 57 (expr -> TkNum .)
    TkClosePar      reduce using rule 57 (expr -> TkNum .)


state 36

    (58) expr -> TkTrue .

    TkPlus          reduce using rule 58 (expr -> TkTrue .)
    TkMinus         reduce using rule 58 (expr -> TkTrue .)
    TkMult          reduce using rule 58 (expr -> TkTrue .)
    TkAnd           reduce using rule 58 (expr -> TkTrue .)
    TkOr            reduce using rule 58 (expr -> TkTrue .)
    TkEqual         reduce using rule 58 (expr -> TkTrue .)
    TkNEqual        reduce using rule 58 (expr -> TkTrue .)
    TkLess          reduce using rule 58 (expr -> TkTrue .)
    TkGreater       reduce using rule 58 (expr -> TkTrue .)
    TkLeq           reduce using rule 58 (expr -> TkTrue .)
    TkGeq           reduce using rule 58 (expr -> TkTrue .)
    TkApp           reduce using rule 58 (expr -> TkTrue .)
    TkComma         reduce using rule 58 (expr -> TkTrue .)
    TkTwoPoints     reduce using rule 58 (expr -> TkTrue .)
    TkSemicolon     reduce using rule 58 (expr -> TkTrue .)
    TkCBlock        reduce using rule 58 (expr -> TkTrue .)
    TkGuard         reduce using rule 58 (expr -> TkTrue .)
    TkNot           reduce using rule 58 (expr -> TkTrue .)
    TkOpenPar       reduce using rule 58 (expr -> TkTrue .)
    TkNum           reduce using rule 58 (expr -> TkTrue .)
    TkTrue          reduce using rule 58 (expr -> TkTrue .)
    TkFalse         reduce using rule 58 (expr -> TkTrue .)
    TkString        reduce using rule 58 (expr -> TkTrue .)
    TkId            reduce using rule 58 (expr -> TkTrue .)
    TkFi            reduce using rule 58 (expr -> TkTrue .)
    TkEnd           reduce using rule 58 (expr -> TkTrue .)
    TkArrow         reduce using rule 58 (expr -> TkTrue .)
    TkClosePar      reduce using rule 58 (expr -> TkTrue .)


state 37

    (59) expr -> TkFalse .

    TkPlus          reduce using rule 59 (expr -> TkFalse .)
    TkMinus         reduce using rule 59 (expr -> TkFalse .)
    TkMult          reduce using rule 59 (expr -> TkFalse .)
    TkAnd           reduce using rule 59 (expr -> TkFalse .)
    TkOr            reduce using rule 59 (expr -> TkFalse .)
    TkEqual         reduce using rule 59 (expr -> TkFalse .)
    TkNEqual        reduce using rule 59 (expr -> TkFalse .)
    TkLess          reduce using rule 59 (expr -> TkFalse .)
    TkGreater       reduce using rule 59 (expr -> TkFalse .)
    TkLeq           reduce using rule 59 (expr -> TkFalse .)
    TkGeq           reduce using rule 59 (expr -> TkFalse .)
    TkApp           reduce using rule 59 (expr -> TkFalse .)
    TkComma         reduce using rule 59 (expr -> TkFalse .)
    TkTwoPoints     reduce using rule 59 (expr -> TkFalse .)
    TkSemicolon     reduce using rule 59 (expr -> TkFalse .)
    TkCBlock        reduce using rule 59 (expr -> TkFalse .)
    TkGuard         reduce using rule 59 (expr -> TkFalse .)
    TkNot           reduce using rule 59 (expr -> TkFalse .)
    TkOpenPar       reduce using rule 59 (expr -> TkFalse .)
    TkNum           reduce using rule 59 (expr -> TkFalse .)
    TkTrue          reduce using rule 59 (expr -> TkFalse .)
    TkFalse         reduce using rule 59 (expr -> TkFalse .)
    TkString        reduce using rule 59 (expr -> TkFalse .)
    TkId            reduce using rule 59 (expr -> TkFalse .)
    TkFi            reduce using rule 59 (expr -> TkFalse .)
    TkEnd           reduce using rule 59 (expr -> TkFalse .)
    TkArrow         reduce using rule 59 (expr -> TkFalse .)
    TkClosePar      reduce using rule 59 (expr -> TkFalse .)


state 38

    (60) expr -> TkString .
